--- a/views/studentResult.ejs
+++ b/views/studentResult.ejs
@@ -58,7 +58,7 @@
     <div  id="i">
 
         
-        <img src="../public/assets/SCET-LOGO (3).png" class="img-fluid" alt="...">
+        <img src="/assets/SCET-LOGO (3).png" class="img-fluid" alt="...">
         
     </div>
      
