--- a/views/studentResult.ejs
+++ b/views/studentResult.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,19 +14,18 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/navbar.css" />
     <style>
+      #i {
+        display: none;
+      }
 
-
-       #i{
-         display: none;
-
-       }
-
-
-      @media print{
-
-        #i{
+      @media print {
+        #i {
           display: block;
         }
+      }
+      @page {
+        size: auto;
+        margin: 0mm;
       }
     </style>
 
@@ -49,20 +47,13 @@
       </nav>
     </header>
     <br />
-
-    
-          
-    <br>
-    <br>
-    <br>
-    <div  id="i">
-
-        
-        <img src="/assets/SCET-LOGO (3).png" class="img-fluid" alt="...">
-        
+    <br />
+    <br />
+    <div id="i">
+      <img src="/assets/college_logo.png" class="img-fluid" alt="..." />
     </div>
-     
-    <section style="margin-top: 100px">
+
+    <section style="margin-top: 30px">
       <div class="container">
         <p class="text-sm-start">Name : <%= studentName %></p>
         <p class="text-xl-start">
@@ -106,65 +97,16 @@
         </button>
       </div>
       <br />
-      <div class="container">
-        <table class="table table-hover">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col">NO.</th>
-              <th scope="col">Subject</th>
-              <th scope="col">MARKS</th>
-              <th scope="col">OUT OF</th>
-            </tr>
-          </thead>
-          <% var status = true %> <% var percentage,sum = 0,sym =' %'; %> <% var
-          cnt = 1 %>
-          <tbody id="table-body">
-            <% studentResult.forEach(function(result){ %> <% sum +=
-            result.score; %>
-            <tr>
-              <th scope="row"><%= cnt++ %></th>
-              <td><%= result.name %></td>
-              <% if(result.score <= 28) { %>
-              <td style="color: rgb(237, 90, 90)"><%= result.score %></td>
-              <% status = false %> <% } else{ %>
-              <td><%= result.score %></td>
-              <% } %>
-              <td>70</td>
-            </tr>
-            <% }); %>
-          </tbody>
-        </table>
-        <% percentage = (sum / (70 * (cnt - 1))) * 100 %>
-        <div class="container" style="margin-top: 50px; text-align: end; font-weight: 700;">
-          <p>Percentage : <%= percentage.toFixed(2) %><%= sym %></p>
-          <% if(status){ %>
-          <p
-            style="
-              background-color: rgb(107, 241, 112);
-              text-align: center;
-              color: #fff;
-            "
-          >
-            Status : Pass
-          </p>
-          <% } else { %>
-          <p
-            style="
-              background-color: rgb(237, 90, 90);
-              text-align: center;
-              color: #fff;
-            "
-          >
-            Status : Fail
-          </p>
-          <% } %>
-        </div>
-
+      <div class="container" id="table-container">
+        <p id="initial" style="text-align: center; color: rgb(181, 181, 182)">
+          ---Enter Search Criteria and hit button.----
+        </p>
         <button
+          id="print-button"
           type="button"
           class="btn btn-outline-dark d-print-none"
           onclick="window.print()"
-          style="margin-top: 5px"
+          style="margin: 15px 0 20px; display: none"
         >
           Print Result
         </button>
